--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     },
     "private": true,
     "dependencies": {
+        "emailjs":  "0.3.3",
         "express":  "3.0.6",
-        "stylus":   "0.31.0",
         "jade":     "0.27.7",
-        "mongodb":  "1.2.7",
         "moment" :  "1.7.2",
-        "emailjs":  "0.3.3"
+        "mongodb":  "1.2.7",
+        "mongoose": "3.6.11",
+        "stylus":   "0.31.0"
     },
     "engines": {
         "node": "0.8.14",
