--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
         "mongoose": "3.6.11",
         "stylus":   "0.31.0"
     },
+    "devDependencies": {
+        "mocha":    "1.11.0",
+        "should":   "1.2.2"
+    },
+    "scripts": {
+        "test": "make test"
+    },
     "engines": {
         "node": "0.8.14",
         "npm":  "1.1.65"
