--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+# App specific files #
+######################
+/app/server/agave-settings.js
+
+
+
 node_modules
 temp
 dist
 .sass-cache
-app/bower_components
 .tmp/
