--- a/package.json
+++ b/package.json
@@ -15,21 +15,19 @@
     },
     "private": true,
     "dependencies": {
-        "emailjs":  "0.3.3",
-        "express":  "3.0.6",
-        "jade":     "0.27.7",
-        "moment" :  "1.7.2",
-        "stylus":   "0.31.0"
+        "express":  "3.3.x",
+        "moment" :  "2.1.x"
     },
     "devDependencies": {
-        "mocha":    "1.11.0",
-        "should":   "1.2.2"
+        "mocha":    "1.12.x",
+        "request":  "2.22.x",
+        "should":   "1.2.x"
     },
     "scripts": {
         "test": "make test"
     },
     "engines": {
-        "node": "0.8.14",
-        "npm":  "1.1.65"
+        "node": "0.10.13",
+        "npm":  "1.3.4"
     }
 }
