--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "test": "make test"
     },
     "engines": {
-        "node": "0.10.13",
+        "node": ">=0.10.13",
         "npm":  "1.3.4"
     }
 }
