--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "private": true,
     "dependencies": {
         "express":  "3.3.x",
-        "moment" :  "2.1.x"
+        "moment" :  "2.1.x",
+        "mongoose": "3.6.x"
     },
     "devDependencies": {
         "mocha":    "1.12.x",
