--- a/package.json
+++ b/package.json
@@ -15,13 +15,36 @@
     },
     "private": true,
     "dependencies": {
-        "express":  "3.3.x",
+        "express":  "3.4.x",
         "moment" :  "2.1.x",
         "mongoose": "3.6.x"
     },
     "devDependencies": {
+        "connect-livereload": "0.2.x",
+        "grunt": "0.4.x",
+        "grunt-contrib-clean": "0.5.x",
+        "grunt-contrib-coffee": "0.7.x",
+        "grunt-contrib-concat": "0.3.x",
+        "grunt-contrib-connect": "0.5.x",
+        "grunt-contrib-copy": "0.4.x",
+        "grunt-contrib-htmlmin": "0.1.x",
+        "grunt-contrib-imagemin": "0.2.x",
+        "grunt-contrib-jshint": "0.6.x",
+        "grunt-contrib-uglify": "0.2.x",
+        "grunt-contrib-watch": "0.5.x",
+        "grunt-mocha": "0.4.x",
+        "grunt-open": "0.2.x",
+        "grunt-regarde": "0.1.x",
+        "grunt-requirejs": "0.4.x",
+        "grunt-svgmin": "0.2.x",
+        "grunt-usemin": "0.1.x",
+        "matchdep": "0.1.x",
+        "time-grunt": "~0.1.1",
+
+
+
         "mocha":    "1.12.x",
-        "request":  "2.22.x",
+        "request":  "2.27.x",
         "should":   "1.2.x",
         "sinon":    "1.7.x",
         "nock":     "0.22.x"
@@ -31,6 +54,6 @@
     },
     "engines": {
         "node": ">=0.10.13",
-        "npm":  "1.3.4"
+        "npm":  "1.3.x"
     }
 }
