--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
         "grunt-contrib-jshint": "0.6.x",
         "grunt-contrib-uglify": "0.2.x",
         "grunt-contrib-watch": "0.5.x",
+        "grunt-express": "1.1.x",
         "grunt-mocha": "0.4.x",
         "grunt-open": "0.2.x",
         "grunt-regarde": "0.1.x",
         "grunt-requirejs": "0.4.x",
-        "grunt-svgmin": "0.2.x",
+        "grunt-shell-spawn": "0.2.x",
         "grunt-usemin": "0.1.x",
         "matchdep": "0.1.x",
         "time-grunt": "~0.1.1",
