--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "private": true,
     "dependencies": {
         "express":  "3.4.x",
-        "moment" :  "2.1.x",
-        "mongoose": "3.6.x"
+        "moment" :  "2.4.x",
+        "mongoose": "3.8.x"
     },
     "devDependencies": {
-        "connect-livereload": "0.2.x",
+        "connect-livereload": "0.3.x",
         "grunt": "0.4.x",
         "grunt-contrib-clean": "0.5.x",
         "grunt-contrib-coffee": "0.7.x",
@@ -28,25 +28,25 @@
         "grunt-contrib-connect": "0.5.x",
         "grunt-contrib-copy": "0.4.x",
         "grunt-contrib-htmlmin": "0.1.x",
-        "grunt-contrib-imagemin": "0.2.x",
-        "grunt-contrib-jshint": "0.6.x",
+        "grunt-contrib-imagemin": "0.3.x",
+        "grunt-contrib-jshint": "0.7.x",
         "grunt-contrib-uglify": "0.2.x",
         "grunt-contrib-watch": "0.5.x",
-        "grunt-express": "1.1.x",
+        "grunt-express": "1.2.x",
         "grunt-mocha": "0.4.x",
         "grunt-open": "0.2.x",
         "grunt-regarde": "0.1.x",
         "grunt-requirejs": "0.4.x",
-        "grunt-shell-spawn": "0.2.x",
-        "grunt-usemin": "0.1.x",
-        "matchdep": "0.1.x",
-        "time-grunt": "~0.1.1",
+        "grunt-shell-spawn": "0.3.x",
+        "grunt-usemin": "2.0.x",
+        "matchdep": "0.3.x",
+        "time-grunt": "0.2.x",
 
 
 
-        "mocha":    "1.12.x",
+        "mocha":    "1.14.x",
         "request":  "2.27.x",
-        "should":   "1.2.x",
+        "should":   "2.0.x",
         "sinon":    "1.7.x",
         "nock":     "0.22.x"
     },
