--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "private": true,
     "dependencies": {
         "express":  "3.4.x",
-        "moment" :  "2.4.x",
-        "mongoose": "3.8.x"
+        "moment" :  "2.4.x"
     },
     "devDependencies": {
         "connect-livereload": "0.3.x",
