Updated config for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # App specific files #
 ######################
 app/scripts/config/agaveSettings.js
-
+app/scripts/config/config.js
 
 node_modules
 temp
