--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-    "name":         "vdjserver-web",
-    "version":      "0.0.1",
-    "description":  "VDJServer.org website",
-    "author": {
-        "name":     "Stephen Mock",
-        "email":    "mock@tacc.utexas.edu"
-    },
+    "name":        "vdjserver-auth",
+    "version":     "1.0.0",
+    "description": "VDJAuth Agave Services",
+    "author": [
+        {
+            "name":  "Stephen Mock",
+            "email": "mock@tacc.utexas.edu"
+        },
+        {
+            "name":  "Walter Scarborough",
+            "email": "wscarbor@tacc.utexas.edu"
+        }
+    ],
     "website":{
-        "url":  "vdjserver.org"
+        "url": "vdjserver.org"
     },
     "repository": {
         "type": "git",
-        "url":  "https://bitbucket.org/taccaci/vdjserver-web"
+        "url":  "https://bitbucket.org/taccaci/vdjserver-auth"
     },
     "private": true,
     "dependencies": {
-        "express":  "3.4.x",
-        "moment" :  "2.5.x"
+        "express": "3.4.x",
+        "moment":  "2.5.x"
     },
     "devDependencies": {
-        "mocha":    "1.17.x",
-        "request":  "2.33.x",
-        "should":   "3.1.x",
-        "sinon":    "1.7.x",
-        "nock":     "0.27.x"
+        "mocha":   "1.17.x",
+        "request": "2.33.x",
+        "should":  "3.1.x",
+        "sinon":   "1.8.x",
+        "nock":    "0.27.x"
     },
     "scripts": {
         "test": "make test"
