--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "private": true,
     "dependencies": {
         "express": "3.4.x",
-        "moment":  "2.5.x"
+        "moment":  "2.5.x",
+        "underscore": "1.5.x"
     },
     "devDependencies": {
         "mocha":   "1.17.x",
