--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dependencies": {
         "express": "3.4.x",
         "moment":  "2.5.x",
-        "underscore": "1.5.x"
+        "underscore": "1.5.x",
+        "q": "1.0.x"
     },
     "devDependencies": {
         "mocha":   "1.17.x",
