--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "dependencies": {
         "express": "3.4.x",
         "moment":  "2.5.x",
-        "underscore": "1.6.x",
-        "q": "1.0.x"
+        "q": "1.0.x",
+        "underscore": "1.6.x"
     },
     "devDependencies": {
         "mocha":   "1.17.x",
-        "request": "2.33.x",
+        "nock":    "0.27.x",
+        "request": "2.34.x",
         "should":  "3.1.x",
-        "sinon":   "1.8.x",
-        "nock":    "0.27.x"
+        "sinon":   "1.8.x"
     },
     "scripts": {
         "test": "make test"
