--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-    "name":        "vdjserver-auth",
-    "version":     "1.0.0",
-    "description": "VDJAuth Agave Services",
-    "author": [
-        {
-            "name":  "Stephen Mock",
-            "email": "mock@tacc.utexas.edu"
-        },
-        {
-            "name":  "Walter Scarborough",
-            "email": "wscarbor@tacc.utexas.edu"
-        }
-    ],
-    "website":{
-        "url": "vdjserver.org"
+  "name": "vdjserver-auth",
+  "version": "1.0.0",
+  "description": "VDJAuth Agave Services",
+  "author": [
+    {
+      "name": "Stephen Mock",
+      "email": "mock@tacc.utexas.edu"
     },
-    "repository": {
-        "type": "git",
-        "url":  "https://bitbucket.org/taccaci/vdjserver-auth"
-    },
-    "private": true,
-    "dependencies": {
-        "express": "3.5.x",
-        "moment":  "2.5.x",
-        "q": "1.0.x",
-        "underscore": "1.6.x"
-    },
-    "devDependencies": {
-        "mocha":   "1.18.x",
-        "nock":    "0.27.x",
-        "request": "2.34.x",
-        "should":  "3.1.x",
-        "sinon":   "1.9.x"
-    },
-    "scripts": {
-        "test": "make test"
-    },
-    "engines": {
-        "node": ">=0.10.13",
-        "npm":  "1.3.x"
+    {
+      "name": "Walter Scarborough",
+      "email": "wscarbor@tacc.utexas.edu"
     }
+  ],
+  "website": {
+    "url": "vdjserver.org"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/taccaci/vdjserver-auth"
+  },
+  "private": true,
+  "dependencies": {
+    "express": "3.5.x",
+    "moment": "2.5.x",
+    "q": "1.0.x",
+    "underscore": "1.6.x",
+    "nodemailer": "^0.6.3"
+  },
+  "devDependencies": {
+    "mocha": "1.18.x",
+    "nock": "0.27.x",
+    "request": "2.34.x",
+    "should": "3.1.x",
+    "sinon": "1.9.x"
+  },
+  "scripts": {
+    "test": "make test"
+  },
+  "engines": {
+    "node": ">=0.10.13",
+    "npm": "1.3.x"
+  }
 }
