--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   },
   "private": true,
   "dependencies": {
-    "body-parser": "1.0.x",
+    "body-parser": "1.2.x",
     "errorhandler": "1.0.x",
-    "express": "4.1.x",
+    "express": "4.3.x",
     "moment": "2.6.x",
-    "morgan": "1.0.x",
+    "morgan": "1.1.x",
     "passport": "0.2.x",
     "passport-http": "0.2.x",
     "q": "1.0.x",
@@ -33,11 +33,12 @@
     "nodemailer": "0.6.x"
   },
   "devDependencies": {
-    "mocha": "1.18.x",
-    "nock": "0.29.x",
-    "request": "2.34.x",
-    "should": "3.3.x",
-    "sinon": "1.9.x"
+    "chai": "1.9.x",
+    "mocha": "1.19.x",
+    "nock": "0.31.x",
+    "request": "2.36.x",
+    "sinon": "1.10.x",
+    "supertest": "0.12.x"
   },
   "scripts": {
     "test": "make test"
