--- a/package.json
+++ b/package.json
@@ -21,26 +21,26 @@
   },
   "private": true,
   "dependencies": {
-    "body-parser": "1.6.x",
-    "errorhandler": "1.1.x",
-    "express": "4.8.x",
-    "moment": "2.8.x",
-    "morgan": "1.2.x",
-    "nodemailer": "1.2.x",
-    "nodemailer-sendmail-transport": "1.0.x",
-    "passport": "0.2.x",
-    "passport-http": "0.2.x",
-    "q": "1.0.x",
-    "socket.io": "1.0.x",
-    "underscore": "1.7.x"
+    "body-parser": "1.7.0",
+    "errorhandler": "1.1.1",
+    "express": "4.8.7",
+    "moment": "2.8.2",
+    "morgan": "1.3.0",
+    "nodemailer": "1.2.1",
+    "nodemailer-sendmail-transport": "1.0.0",
+    "passport": "0.2.1",
+    "passport-http": "0.2.2",
+    "q": "1.0.1",
+    "socket.io": "1.0.6",
+    "underscore": "1.7.0"
   },
   "devDependencies": {
-    "chai": "1.9.x",
-    "mocha": "1.21.x",
-    "nock": "0.45.x",
-    "request": "2.40.x",
-    "sinon": "1.10.x",
-    "supertest": "0.13.x"
+    "chai": "1.9.1",
+    "mocha": "1.21.4",
+    "nock": "0.46.0",
+    "request": "2.40.1",
+    "sinon": "1.10.3",
+    "supertest": "0.13.0"
   },
   "scripts": {
     "test": "make test"
