--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "0.2.1",
     "passport-http": "0.2.2",
     "q": "1.0.1",
+    "recaptcha":"1.2.0",
     "socket.io": "1.2.0",
     "underscore": "1.7.0"
   },
@@ -38,7 +39,7 @@
     "chai": "1.9.2",
     "mocha": "2.0.1",
     "nock": "0.48.2",
-    "request": "2.40.1",
+    "request": "2.47.0",
     "sinon": "1.11.1",
     "supertest": "0.14.0"
   },
