--- a/package.json
+++ b/package.json
@@ -22,26 +22,26 @@
   "private": true,
   "dependencies": {
     "body-parser": "1.9.2",
+    "chai": "1.9.2",
     "errorhandler": "1.2.2",
     "express": "4.10.1",
+    "mocha": "2.0.1",
     "moment": "2.8.3",
     "morgan": "1.4.1",
+    "nock": "0.48.2",
     "nodemailer": "1.3.0",
     "nodemailer-sendmail-transport": "1.0.0",
     "passport": "0.2.1",
     "passport-http": "0.2.2",
     "q": "1.0.1",
     "recaptcha":"1.2.0",
+    "request": "2.47.0",
+    "sinon": "1.11.1",
     "socket.io": "1.2.0",
+    "supertest": "0.14.0",
     "underscore": "1.7.0"
   },
   "devDependencies": {
-    "chai": "1.9.2",
-    "mocha": "2.0.1",
-    "nock": "0.48.2",
-    "request": "2.47.0",
-    "sinon": "1.11.1",
-    "supertest": "0.14.0"
   },
   "scripts": {
     "test": "make test"
