--- a/.jscsrc
+++ b/.jscsrc
@@ -1,11 +1,11 @@
 {
     "preset": "google",
     "validateIndentation": 4,
-    "maximumLineLength": 120,
+    "maximumLineLength": 150,
+    "requireCamelCaseOrUpperCaseIdentifiers": "ignoreProperties",
     "requireOperatorBeforeLineBreak": [
         "?",
         "=",
-        "-",
         "/",
         "*",
         "==",
@@ -16,6 +16,5 @@
         ">=",
         "<",
         "<="
-    ],
-    "requireCamelCaseOrUpperCaseIdentifiers": "ignoreProperties"
+    ]
 }
