--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -1,9 +1,9 @@
 [supervisord]
 
-[program:vdj-auth]
-command=/usr/bin/node /vdjserver-auth/app/scripts/app.js
-stdout_logfile=/vdjserver-auth/logs/forever.log
-stderr_logfile=/vdjserver-auth/logs/stderr.log
+[program:vdjserver-web-api]
+command=/usr/bin/node /vdjserver-web-api/app/scripts/app.js
+stdout_logfile=/vdjserver-web-api/logs/output.log
+stderr_logfile=/vdjserver-web-api/logs/error.log
 autostart=true
 autorestart=true
 startretries=10
