--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai": "1.10.0",
     "errorhandler": "1.3.2",
     "express": "4.11.1",
+    "kue": "0.9.1",
     "mocha": "2.1.0",
     "moment": "2.9.0",
     "morgan": "1.5.1",
