Redirect supervisor to stdout/stderr

--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -2,8 +2,10 @@
 
 [program:vdjserver-web-api]
 command=/usr/bin/node /vdjserver-web-api/app/scripts/app.js
-stdout_logfile=/vdjserver-web-api/logs/output.log
-stderr_logfile=/vdjserver-web-api/logs/error.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
 startretries=10
