--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -1,7 +1,7 @@
 [supervisord]
 
 [program:vdjserver-web-api]
-command=/usr/bin/node /vdjserver-web-api/app/scripts/app.js
+command=/usr/bin/node --harmony /vdjserver-web-api/app/scripts/app.js
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
