--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -1,6 +1,16 @@
 [supervisord]
 
-[program:vdjserver-web-api]
+[program:redis]
+command=/usr/local/bin/redis-server /etc/redis/redis.conf
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autostart=true
+autorestart=true
+startretries=10
+
+[program:node]
 command=/usr/bin/node --harmony /vdjserver-web-api/app/scripts/app.js
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
