Created separate feedback email address in config

--- a/.env.defaults
+++ b/.env.defaults
@@ -22,6 +22,7 @@ RECAPTCHA_PUBLIC=
 
 # Email Settings
 EMAIL_ADDRESS=vdj@vdjserver.org
+FEEDBACK_EMAIL_ADDRESS=vdj@vdjserver.org
 
 # Dev Settings
 DEBUG_CONSOLE=false
