Added outgoing mail support for docker image

--- a/.env.defaults
+++ b/.env.defaults
@@ -23,6 +23,8 @@ RECAPTCHA_PUBLIC=
 # Email Settings
 EMAIL_ADDRESS=vdj@vdjserver.org
 FEEDBACK_EMAIL_ADDRESS=vdj@vdjserver.org
+POSTFIX_HOSTNAME=
+POSTFIX_RELAYHOST=
 
 # Dev Settings
 DEBUG_CONSOLE=false
