--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -1,21 +1,28 @@
 [supervisord]
 
-[program:redis]
-command=/usr/local/bin/redis-server /etc/redis/redis.conf
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-autostart=true
-autorestart=true
-startretries=10
-
 [program:node]
-command=/usr/bin/node --harmony /vdjserver-web-api/app/scripts/app.js
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-autostart=true
-autorestart=true
-startretries=10
+command = /usr/bin/node --harmony /vdjserver-web-api/app/scripts/app.js
+autostart    = true
+autorestart  = true
+startretries = 10
+stdout_logfile  = /dev/stdout
+stderr_logfile  = /dev/stderr
+stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes = 0
+
+#[program:postfix]
+#process_name    = master
+#directory   = /etc/postfix
+#command     = /usr/sbin/postfix -c /etc/postfix start
+#startsecs   = 0
+#autorestart = false
+
+[program:redis]
+command = /usr/local/bin/redis-server /etc/redis/redis.conf
+autostart    = true
+autorestart  = true
+startretries = 10
+stdout_logfile  = /dev/stdout
+stderr_logfile  = /dev/stderr
+stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes = 0
