--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "json-approver": "1.0.3",
     "kue": "0.9.3",
     "mocha": "2.1.0",
-    "moment": "2.9.0",
+    "moment": "2.10.6",
+    "moment-timezone": "0.4.1",
     "morgan": "1.5.1",
     "nock": "1.6.0",
     "nodemailer": "1.3.0",
