Added job queue and new endpoint

--- a/.env.defaults
+++ b/.env.defaults
@@ -15,6 +15,7 @@ VDJ_BACKBONE_HOST=
 AGAVE_STORAGE_SYSTEM=data.vdjserver.org
 
 # VDJ API Settings
+VDJ_API_URL=
 VDJ_API_PORT=8081
 SESSION_SECRET=
 RECAPTCHA_SECRET=
