--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "passport": "0.2.1",
     "passport-http": "0.2.2",
     "q": "1.1.2",
-    "recaptcha":"1.2.0",
+    "recaptcha-v2":"0.1.3",
     "request": "2.51.0",
     "sinon": "1.12.2",
     "socket.io": "1.3.5",
