update vdj email

--- a/.env.defaults
+++ b/.env.defaults
@@ -22,8 +22,8 @@ RECAPTCHA_SECRET=
 RECAPTCHA_PUBLIC=
 
 # Email Settings
-EMAIL_ADDRESS=vdj@vdjserver.org
-FEEDBACK_EMAIL_ADDRESS=vdj@vdjserver.org
+EMAIL_ADDRESS=vdjserver@utsouthwestern.edu
+FEEDBACK_EMAIL_ADDRESS=vdjserver@utsouthwestern.edu
 POSTFIX_HOSTNAME=
 POSTFIX_RELAYHOST=
 
