--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
   "private": true,
   "dependencies": {
     "body-parser": "1.10.2",
-    "chai": "1.10.0",
+    "chai": "3.5.0",
     "errorhandler": "1.3.2",
     "express": "4.11.1",
     "json-approver": "1.0.3",
     "kue": "0.10.5",
-    "mocha": "2.1.0",
+    "mocha": "2.5.3",
     "moment": "2.10.6",
     "moment-timezone": "0.4.1",
     "morgan": "1.5.1",
-    "nock": "1.6.0",
+    "nock": "8.0.0",
     "nodemailer": "1.3.0",
     "nodemailer-sendmail-transport": "1.0.0",
     "passport": "0.2.1",
@@ -39,9 +39,10 @@
     "q": "1.1.2",
     "recaptcha-v2":"0.1.3",
     "request": "2.51.0",
-    "sinon": "1.12.2",
+    "sinon": "1.17.4",
     "socket.io": "1.3.7",
-    "supertest": "0.15.0",
+    "supertest": "1.2.0",
+    "supertest-as-promised": "3.1.0",
     "underscore": "1.7.0"
   },
   "devDependencies": {
