Switched to ubuntu base for better update management

--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -1,7 +1,7 @@
 [supervisord]
 
 [program:node]
-command = /usr/local/bin/node --harmony /vdjserver-web-api/app/scripts/app.js
+command = /usr/bin/node --harmony /vdjserver-web-api/app/scripts/app.js
 autostart    = true
 autorestart  = true
 startretries = 10
@@ -18,7 +18,7 @@ stderr_logfile_maxbytes = 0
 #autorestart = false
 
 [program:redis]
-command = /usr/local/bin/redis-server /etc/redis/redis.conf
+command = /usr/bin/redis-server /etc/redis/redis.conf
 autostart    = true
 autorestart  = true
 startretries = 10
