--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "sinon": "1.12.2",
     "socket.io": "1.3.7",
     "supertest": "0.15.0",
-    "underscore": "1.7.0"
+    "underscore": "1.7.0",
+    "form-data": "1.0.0-rc4"
   },
   "devDependencies": {
   },
