--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "vdjserver-auth",
+  "name": "vdjserver-api",
   "version": "1.0.0",
-  "description": "VDJAuth Agave Services",
+  "description": "VDJServer Web Services",
   "author": [
     {
-      "name": "Stephen Mock",
-      "email": "mock@tacc.utexas.edu"
-    },
-    {
-      "name": "Walter Scarborough",
-      "email": "wscarbor@tacc.utexas.edu"
+      "name": "VDJServer Team",
+      "email": "vdjserver@utsouthwestern.edu"
     }
   ],
   "website": {
@@ -23,8 +19,10 @@
   "dependencies": {
     "body-parser": "1.10.2",
     "chai": "1.10.0",
+    "d3": "3.4.11",
     "errorhandler": "1.3.2",
     "express": "4.11.1",
+    "form-data": "1.0.0-rc4",
     "json-approver": "1.0.3",
     "kue": "0.10.5",
     "mocha": "2.1.0",
@@ -42,8 +40,7 @@
     "sinon": "1.12.2",
     "socket.io": "1.3.7",
     "supertest": "0.15.0",
-    "underscore": "1.7.0",
-    "form-data": "1.0.0-rc4"
+    "underscore": "1.7.0"
   },
   "devDependencies": {
   },
