allow account tests to reuse agave profile, standardize log messages

--- a/.env.defaults
+++ b/.env.defaults
@@ -20,7 +20,11 @@ VDJ_API_PORT=8081
 SESSION_SECRET=
 RECAPTCHA_SECRET=
 RECAPTCHA_PUBLIC=
+
+# VDJ API Test Settings
 ALLOW_RECAPTCHA_SKIP=false
+USE_TEST_ACCOUNT=false
+TEST_ACCOUNT_USERNAME=
 
 # Email Settings
 EMAIL_ADDRESS=vdjserver@utsouthwestern.edu
