guest account for community data proxy

--- a/.env.defaults
+++ b/.env.defaults
@@ -8,6 +8,10 @@ VDJ_SERVICE_ACCOUNT=
 VDJ_SERVICE_ACCOUNT_SECRET=
 VDJ_SERVICE_ACCOUNT_TOKEN=
 
+# VDJ Guest Account Settings
+VDJ_GUEST_ACCOUNT=
+VDJ_GUEST_ACCOUNT_SECRET=
+
 # VDJ Backbone Settings
 VDJ_BACKBONE_HOST=
 
