--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -10,6 +10,16 @@ stderr_logfile  = /dev/stderr
 stdout_logfile_maxbytes = 0
 stderr_logfile_maxbytes = 0
 
+[program:guest]
+command = /usr/bin/node --harmony /vdjserver-web-api/app/scripts/guest.js
+autostart    = true
+autorestart  = true
+startretries = 10
+stdout_logfile  = /dev/stdout
+stderr_logfile  = /dev/stderr
+stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes = 0
+
 #[program:postfix]
 #process_name    = master
 #directory   = /etc/postfix
