--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "d3": "4.2.7",
     "errorhandler": "1.3.2",
     "express": "4.11.1",
-    "form-data": "1.0.0-rc4",
+    "form-data": "2.3.2",
     "json-approver": "1.0.3",
     "kue": "0.10.5",
     "mocha": "2.5.3",
@@ -30,8 +30,8 @@
     "moment-timezone": "0.4.1",
     "morgan": "1.5.1",
     "nock": "8.0.0",
-    "nodemailer": "1.3.0",
-    "nodemailer-sendmail-transport": "1.0.0",
+    "nodemailer": "",
+    "nodemailer-sendmail-transport": "",
     "passport": "0.2.1",
     "passport-http": "0.2.2",
     "q": "1.1.2",
