--- a/.env.defaults
+++ b/.env.defaults
@@ -31,8 +31,9 @@ USE_TEST_ACCOUNT=false
 TEST_ACCOUNT_USERNAME=
 
 # Email Settings
-EMAIL_ADDRESS=vdjserver@utsouthwestern.edu
-FEEDBACK_EMAIL_ADDRESS=vdjserver@utsouthwestern.edu
+EMAIL_ADDRESS=vdj@vdjserver.org
+FEEDBACK_EMAIL_ADDRESS=vdj@vdjserver.org
+REPLYTO_EMAIL_ADDRESS=vdjserver@utsouthwestern.edu
 POSTFIX_HOSTNAME=
 POSTFIX_RELAYHOST=
 
