fix email address

--- a/.env.defaults
+++ b/.env.defaults
@@ -32,7 +32,7 @@ TEST_ACCOUNT_USERNAME=
 
 # Email Settings
 EMAIL_ADDRESS=vdj@vdjserver.org
-FEEDBACK_EMAIL_ADDRESS=vdj@vdjserver.org
+FEEDBACK_EMAIL_ADDRESS=vdjserver@utsouthwestern.edu
 REPLYTO_EMAIL_ADDRESS=vdjserver@utsouthwestern.edu
 POSTFIX_HOSTNAME=
 POSTFIX_RELAYHOST=
