--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vdjserver-api",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "VDJServer Web Services",
   "author": [
     {
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/taccaci/vdjserver-auth"
+    "url": "https://bitbucket.org/vdjserver/vdjserver-web-api"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "d3": "4.2.7",
     "errorhandler": "1.3.2",
     "express": "4.11.1",
+    "express-openapi": "^6.0.0",
     "form-data": "2.3.2",
     "json-approver": "1.0.3",
     "kue": "0.10.5",
@@ -35,14 +36,13 @@
     "passport": "0.2.1",
     "passport-http": "0.2.2",
     "q": "1.1.2",
-    "recaptcha-v2":"0.1.3",
+    "recaptcha-v2": "0.1.3",
     "request": "2.51.0",
     "sinon": "1.17.4",
     "socket.io": "1.3.7",
     "underscore": "1.7.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "make test"
   },
